--- a/TP07/Views/Home/ConfigurarJuego.cshtml
+++ b/TP07/Views/Home/ConfigurarJuego.cshtml
@@ -66,4 +66,5 @@ Debe existir un botón Jugar que invoque al método Comenzar del controller.
       <input type="text" class="form-control" id="Nombre" placeholder="Nombre"  autocomplete= "off" name="Nombre" required>
   </div>
 </form>
+<button type="submit" class="btn btn-primary_ botonderecho">¡Comenzar a jugar!</button>
 </div>
