--- a/TP07/Views/Home/Index.cshtml
+++ b/TP07/Views/Home/Index.cshtml
@@ -8,5 +8,5 @@
 Debe mostrar el logo del juego y un enlace en formato de botón que invoca al método
 ConfigurarJuego del controller-->
 
-<img src="/imagenes/logo.png">
-  <a href='@Url.Action("ConfigurarJuego", "Home")'class="btn btn-primary_ botones ">¡Quiero jugar!</a>
+                                                                                   
+  <a href='@Url.Action("ConfigurarJuego", "Home")'class="btn btn-primary_ ">¡Quiero jugar!</a>
