--- a/TP07/wwwroot/css/site.css
+++ b/TP07/wwwroot/css/site.css
@@ -1,7 +1,20 @@
+.cuerpo{
+  margin:20px;
+  padding:10px;
+  
+}
 html {
   font-size: 14px;
+  
 }
-
+a.navbar-brand {  
+  white-space: normal;
+  text-align: center;
+  word-break: break-all;
+}
+.fondo{
+  background-color: #fff;
+}
 @media (min-width: 768px) {
   html {
     font-size: 16px;
@@ -15,4 +28,93 @@ html {
 
 body {
   margin-bottom: 60px;
+ 
 }
+
+a.navbar-brand {  
+  white-space: normal;
+  text-align: center;
+  word-break: break-all;
+}
+
+
+.btn-primary_ {
+  color: #fff;
+  background-color: rgb(160, 156, 156);
+  border-color: rgb(160, 156, 156)E;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+  color: #fff;
+  background-color: #1b6ec2;
+  border-color: #1861ac;
+}
+
+
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  font-size: 14px;
+}
+@media (min-width: 768px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+.border-top {
+  border-top: 1px solid #e5e5e5;
+}
+.border-bottom {
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.box-shadow {
+  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+
+button.accept-policy {
+  font-size: 1rem;
+  line-height: inherit;
+}
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+
+.footer {
+  width: 100%;
+  white-space: nowrap;
+ 
+}
+
+header{
+  height:12%;
+  background-color: rgb(160, 156, 156);
+/*font-family: monospace;*/
+display: flex!important;
+justify-content: space-around;
+}
+
+nav ul
+{
+
+width:20%;
+  height:20%;
+list-style-type:none;
+float:right;
+  display:inline-flex;
+background-color: rgb(160, 156, 156);  
+  
+}
+
+/*.nav-link:hover {font-weight: 900;}*/
+.seleccion:hover {
+  background-color:  rgb(172, 172, 172);
+}
+
