--- a/TP07/Views/Home/ConfigurarJuego.cshtml
+++ b/TP07/Views/Home/ConfigurarJuego.cshtml
@@ -17,46 +17,38 @@ Debe existir un botón Jugar que invoque al método Comenzar del controller.
   
 <form action='@Url.Action("Comenzar","Home")' method="GET" enctype="multipart/form-data">
 
-  <div class="form-group pb-4">
-      <input type="radio" class="form-control" id="Baja" placeholder="Baja"  autocomplete= "off" name="Baja" required>
-  </div>
+      <input type="radio"  id="Baja" value="Baja"  name="dificultad"/> <label for="Baja"> Baja </label><br/>
 
-   <div class="form-group pb-4">
-    <input type="radio" class="form-control" id="Media" placeholder="Media" autocomplete= "off" name="Media" required>
-  </div>
+    <input type="radio"  id="Media" value="Media" name="dificultad"/> <label for="Media"> Media </label><br/>
 
-   <div class="form-group pb-4">
-    <input type="radio" class="form-control" id="Alta" placeholder="Alta" autocomplete= "off" name="Alta" required>
-  </div>
 
-     <div class="form-group pb-4">
-    <input type="radio" class="form-control" id="¡Todas!" placeholder="¡Todas!" autocomplete= "off" name="¡Todas!" required>
-  </div>
+  
+    <input type="radio"  id="Alta" value="Alta" name="dificultad"/> <label for="Alta"> Alta </label><br/>
+ 
+
+    
+    <input type="radio"  id="¡Todas!" value="-1"  name="dificultad"/> <label for="¡Todas!"> ¡Todas! </label><br/><br/>
+ 
 
 
 <h1>CATEGORÍA</h1>
 
-  <div class="form-group pb-4">
-      <input type="radio" class="form-control" id="Madrijim" placeholder="Madrijim"  autocomplete= "off" name="Madrijim" required>
-  </div>
 
-   <div class="form-group pb-4">
-    <input type="radio" class="form-control" id="Majane" placeholder="Majane" autocomplete= "off" name="Majane" required>
-  </div>
+      <input type="radio" id="Madrijim" value="Madrijim" name="categoria" /> <label for="Madrijim"> Madrijim </label><br/>
+ 
 
-   <div class="form-group pb-4">
-    <input type="radio" class="form-control" id="Dorjarock" placeholder="Dorjarock" autocomplete= "off" name="Dorjarock" required>
-  </div>
+    <input type="radio"  id="Majane" value="Majane" name="categoria" /> <label for="Majane"> Majane </label><br/>
+ 
 
-     <div class="form-group pb-4">
-    <input type="radio" class="form-control" id="Comunidad " placeholder="Comunidad " autocomplete= "off" name="Comunidad " required>
-  </div>
-
-   <div class="form-group pb-4">
-    <input type="radio" class="form-control" id="¡Todas!" placeholder="¡Todas!" autocomplete= "off" name="¡Todas!" required>
-  </div>
-
-  <input type="text" class="form-control" id="Nombre" placeholder="Nombre"  autocomplete= "off" name="Nombre" required>
+  
+    <input type="radio" id="Dorjarock" value="Dorjarock" name="categoria" /> <label for="Dorjarock"> Dorjarock </label><br/>
+ 
+    <input type="radio" id="Comunidad " value="Comunidad " name="categoria "/> <label for="Comunidad"> Comunidad </label><br/>
+ 
+    <input type="radio" id="¡Todas!" value="-1" name="Categoria" /> <label for="¡Todas!"> ¡Todas! </label><br/><br/>
+  
+  <h1>NOMBRE</h1>
+  <input type="text" class="form-control" id="Nombre"  autocomplete= "off" name="username" required><br/>
  
 
 <button type="submit" class="btn btn-primary_ botonderecho">¡Comenzar a jugar!</button>
