--- a/TP07/Views/Home/Juego.cshtml
+++ b/TP07/Views/Home/Juego.cshtml
@@ -19,19 +19,17 @@ del controller).-->
                           <div class="row text-center form_items">
                      @foreach(Respuesta resp in @ViewBag.Respuestas)
                         {
-                          
+                        
                          <div class="col-md-6 py-3">
-                              <label id="opc_1" class="step_1 bg-white overflow-hidden rounded-pill text-center">
-                                 @ViewBag.Respuesta.Contenido
-                                 <input for="opc_1" type="radio" name="stp_1_select_option" value="@ViewBag.Respuesta.Contenido">
+                               <label id="opt_1" class="step_1 bg-white overflow-hidden rounded-pill text-center">
+                                 Egypt
+                                 <input for="opt_1" type="radio" name="stp_1_select_option" value="Egypt">
                               </label>
                            </div>
                            
  
                         }
                         
-
-
  </div>
  </div>
 
