--- a/TP07/Views/Home/_Layout.cshtml
+++ b/TP07/Views/Home/_Layout.cshtml
@@ -41,7 +41,7 @@ En el menú deben estar el link a la Home y el logo del Mundial Qatar2022 -->
     @await RenderSectionAsync("Scripts", required: false)
     <footer class="border-top footer text-muted">
     <div class="container blanco">
-        &copy; 2022 - Preguntas sobre Comunidad Dor Jadash - Angel, Agustina - Cembal, Micaela - Israel, Martin
+        &copy; 2022 - Angel, Agustina - Cembal, Micaela - Israel, Martin
     </div>
     |</footer>
 </body>
