--- a/TP07/Views/Home/Respuesta.cshtml
+++ b/TP07/Views/Home/Respuesta.cshtml
@@ -4,23 +4,33 @@
         <div class="form_content">
                      <div class="question_title py-5 text-white">
                         <h1 class="text-center text-uppercase overflow-hidden rounded-pill">@ViewBag.UnaPregunta.Enunciado </h1>
-                        <h1>@ViewBag.Mensaje</h1>
+                        <!--h1>@ViewBag.Mensaje</h1-->
                      </div>
                      <div class="row text-center form_items">
                        
                   
                             <div class="row">
+                            
                               @foreach(Respuesta resp in @ViewBag.Respuestas)
                               {
-                               
-                                 <!--<p class= "step_1 bg-white overflow-hidden rounded-pill text-center" style=""> @resp.Contenido </p>-->
-                                 <div class="col-lg-6 mb-2"><input for="opt_1" type="radio" name="idRespuesta" value="@resp.IdRespuesta"> <label id="opt_1" class="step_1 bg-white overflow-hidden rounded-pill text-center">@resp.Contenido</label></div>
+                                 string  clase="";                                    
+                                 if (ViewBag.IdRespuesta==resp.IdRespuesta && ViewBag.Correcta==true) {
+                                    clase="seleccionadacorrecto";
+                                 }
+                                 else if (ViewBag.IdRespuesta==resp.IdRespuesta && ViewBag.Correcta==false) {
+                                    clase="seleccionadaincorrecto";
+                                 }
+                                 
+                                 <div class="col-lg-6 mb-2  @clase">
+                                   <label id="opt_1" class="step_1 bg-white overflow-hidden rounded-pill text-center">@resp.Contenido</label>
+                                  </div>
+                                
                               }  
                             
                             </div>
                                
-                              <a href='@Url.Action("Jugar", "Home")'class="btn btn-primary_ ">Continuar</a>
-                           </form>
+                              <a href='@Url.Action("Jugar", "Home")'class="btn btn-primary_ ">Siguiente Pregunta</a>
+                           
                         
                         </div>
                                                 
