--- a/TP07/Views/Home/Fin.cshtml
+++ b/TP07/Views/Home/Fin.cshtml
@@ -9,4 +9,5 @@ b. Puntaje final
 c. Un enlace para volver a jugar (Reinicia el juego invocando al método
 ConfigurarJuego del controller)-->
 
-<h1> hola </h1>
+<h1>@ViewBag.username</h1>
+<!--h1>@ViewBag.puntajeView</h1-->
