--- a/TP07/Views/Home/Index.cshtml
+++ b/TP07/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+        <div class="pb-5"> </div>
 }
 
 
@@ -8,5 +9,22 @@
 Debe mostrar el logo del juego y un enlace en formato de botón que invoca al método
 ConfigurarJuego del controller-->
 
-                                                                                   
-  <a href='@Url.Action("ConfigurarJuego", "Home")'class="btn btn-primary_ ">¡Quiero jugar!</a>
+<div class="container">
+
+<div class="row">
+
+<div class="col-sm">
+</div>
+
+<div class="col-sm">
+ <a href='@Url.Action("ConfigurarJuego", "Home")'class="step_1 bg-white overflow-hidden rounded-pill text-center color tamano">¡Quiero jugar!</a>
+</div>
+
+<div class="col-sm">
+</div>
+
+</div>                                                                                 
+ 
+
+</div>                                                                                 
+ 
