--- a/TP07/wwwroot/css/site.css
+++ b/TP07/wwwroot/css/site.css
@@ -53,8 +53,9 @@ a.navbar-brand {
   border-color: #1861ac;
 }
 
-
-
+.fin{
+  color:#1861ac;
+}
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
