--- a/TP07/Views/Home/Juego.cshtml
+++ b/TP07/Views/Home/Juego.cshtml
@@ -11,8 +11,8 @@ del controller).-->
     ViewData["Title"] = "Home Page";
 }
         <div class="form_content">
-        <h1>@ViewBag.username</h1>
-         <h1>Puntaje Actual: @ViewBag.Puntajeok</h1>
+        <h1>Nombre: @ViewBag.username</h1>
+      <h1>Puntaje Actual: @ViewBag.Puntajeok</h1>
                      <div class="question_title py-5 text-white">
                         <h1 class="text-center text-uppercase overflow-hidden rounded-pill">@ViewBag.Pregunta.Enunciado </h1>
                      </div>
