--- a/TP07/Views/Home/Fin.cshtml
+++ b/TP07/Views/Home/Fin.cshtml
@@ -1,6 +1,11 @@
 @{
     ViewData["Title"] = "Home Page";
+         <div class="pb-5"> </div>
+          <div class="pb-5"> </div>
+           <div class="pb-5"> </div>
+            <div class="pb-5"> </div>
 }
+
 
 
 <!--Muestra:
@@ -21,9 +26,9 @@ ConfigurarJuego del controller)-->
 </div>
 <div class="col-sm">
 
-<h1 class="fin">Nombre: @ViewBag.username</h1>
+<center><h1 class="fin">Nombre: @ViewBag.username</h1>
 <h1 class="fin">Puntaje Actual: @ViewBag.Puntajeok</h1>
-<a class="btn btn-primary_ botonderecho" asp-area="" asp-controller="Home" asp-action="ConfigurarJuego"> ¡Volver a jugar!</a>
+ <a class="btn btn-primary_ botonderecho" asp-area="" asp-controller="Home" asp-action="ConfigurarJuego"> ¡Volver a jugar!</a> </center>
 </div>
 
 <div class="col-sm">
