--- a/TP07/Views/Home/Juego.cshtml
+++ b/TP07/Views/Home/Juego.cshtml
@@ -9,14 +9,15 @@ del controller).-->
 
 @{
     ViewData["Title"] = "Home Page";
+      <div class="pb-3"> </div>
 }
         <div class="form_content">
-        <h1>Nombre: @ViewBag.username</h1>
-      <h1>Puntaje Actual: @ViewBag.Puntajeok</h1>
+        <h1 class="fin">Nombre: @ViewBag.username</h1>
+      <h1 class="fin">Puntaje Actual: @ViewBag.Puntajeok</h1>
                      <div class="question_title py-5 text-white">
                         <h1 class="text-center text-uppercase overflow-hidden rounded-pill">@ViewBag.Pregunta.Enunciado </h1>
                      </div>
-                     <div class="row text-center form_items">
+                     <div class="row text-center form_items ">
                        <form action='@Url.Action("VerificarRespuesta", "Home")' method="post">
                        <input type="hidden" name="idPregunta" value="@ViewBag.Pregunta.IdPregunta">
                             <div class="row">
