--- a/TP07/Views/Home/Fin.cshtml
+++ b/TP07/Views/Home/Fin.cshtml
@@ -27,7 +27,7 @@ ConfigurarJuego del controller)-->
 <div class="col-sm">
 
 <center><h1 class="fin">Nombre: @ViewBag.username</h1>
-<h1 class="fin">Puntaje Actual: @ViewBag.Puntajeok</h1>
+<h1 class="fin">Puntaje Final: @ViewBag.Puntajeok</h1>
  <a class="btn btn-primary_ botonderecho" asp-area="" asp-controller="Home" asp-action="ConfigurarJuego"> ¡Volver a jugar!</a> </center>
 </div>
 
